02-02-06 mfp. Starting to fix long-standing mishandling of untracked

   parameters. Removed check for 'label' entry in the ParameterSet's
   table; this seems to have been a leftover from a previous
   misunderstanding regarding ParameterSet objects having names. This
   was also probably the source of the (defunct) error messages
   regarding 'anonymous parameter sets'.

31-01-06 mfp. Remove unnecessary rejection of empty parameter sets
   from MakersProcess.cc
   Add test for overriding 'used' blocks and PSets; test is commented
   out because the current code fails! The test/sample.txt file is
   correct in its use. The failure is not in the parser, but in the tree
   walker code.

17-01-06 mfp. Added protection to prevent circular inclusion.
   Also made EdmConfigToPython use preprocesser.

17-01-06 mfp. Added 'include' functionality, via use of
    preprocessor. Also modified the lexer/parser to disallow
    multi-line strings, which (up to very recently) were not
    working correctly anyway. This was done in order to make
    the preprocessing simpler to understand, and so that the
    preprocessing did not need to understand when it was
    "within" a string.

    The preprocessor is currently lacking protection against
    circular inclusion. This will be added soon. This preliminary
    check-in is being done so that Jim can work elsewhere in
    ParameterSet without colliding.

12-01-06 mfp. Fixed bug in pset_lex.l

The bug was in the pattern that identified double-quoted strings.  The
(wrong) behavior to was have a newline terminate a double-quoted
string. This had at least two bad effects:
  -- we would fail to catch errors in which a double-quoted string
     did not have an ending double-quote, e.g.
              string s = "Note the lack of trailing double-quote
     did not produce a parse error
  -- we would fail to parse what should have been a legal string,
     e.g.
        string s = "line 1
                    line 2"